pie chart[WIP]: handle drawing the line

--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
       <!--Div that will hold the pie chart-->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <div class="col-lg-6 col-md-12">
                     <div id="chart_div" style="position: relative"></div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div id="chart_div2"></div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-md-6">
